SERVER-24570 Fix overeager dassert in WriteConcernResult::appendTo